--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "Syntactical sugar on top of the MQTT client cake",
   "private": true,
+  "files": "dist",
   "main": "dist/topping.js",
   "scripts": {
     "compile": "babel src --out-dir dist",
