--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "topping",
+  "name": "mqtt-topping",
   "version": "0.2.0",
   "description": "Syntactical sugar on top of the MQTT client cake",
-  "private": true,
-  "files": "dist",
+  "files": [
+    "dist/"
+  ],
   "main": "dist/topping.js",
   "scripts": {
     "compile": "babel src --out-dir dist",
@@ -25,5 +26,6 @@
     "mocha": "^2.3.0",
     "sinon": "^1.16.1",
     "sinon-chai": "^2.8.0"
-  }
+  },
+  "license": "MIT"
 }
