--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "main": "dist/topping.js",
   "scripts": {
-    "compile": "babel src --out-dir dist",
+    "prepublish": "babel src --out-dir dist",
     "test": "mocha --compilers js:babel/register"
   },
   "repository" : {
