--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "babel": "^5.8.23",
     "chai": "^3.2.0",
+    "chai-as-promised": "^5.1.0",
     "eslint": "^1.3.1",
     "mocha": "^2.3.0",
     "sinon": "^1.16.1",
