--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,14 @@
 {
+  "extends": "eslint:recommended",
   "env": {
     "es6": true,
     "node": true
   },
   "ecmaFeatures": {
     "modules": true
+  },
+  "rules": {
+    "no-console": 0,
+    "semi": [2, "never"]
   }
 }
