--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   ],
   "main": "dist/topping.js",
   "scripts": {
-    "prepublish": "babel src --out-dir dist",
-    "test": "mocha --compilers js:babel/register"
+    "prepublish": "babel src --out-dir dist --source-maps",
+    "test": "mocha --compilers js:babel-core/register"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,8 @@
     "mqtt": "^1.4.0"
   },
   "devDependencies": {
-    "babel": "^5.8.23",
+    "babel-cli": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
     "chai": "^3.2.0",
     "chai-as-promised": "^5.1.0",
     "eslint": "^1.3.1",
