--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "axios": "^0.7.0",
     "lodash.forown": "^3.0.2",
-    "lodash.isboolean": "^3.0.1",
+    "lodash.get": "^3.7.0",
     "lodash.omit": "^3.1.0",
     "lodash.without": "^3.2.1",
     "mqtt": "^1.4.0"
