--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lodash.forown": "^3.0.2",
     "lodash.get": "^3.7.0",
     "lodash.omit": "^3.1.0",
-    "lodash.without": "^3.2.1",
+    "lodash.remove": "^3.1.0",
     "mqtt": "^1.4.0"
   },
   "devDependencies": {
