--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash.get": "^3.7.0",
     "lodash.omit": "^3.1.0",
     "lodash.remove": "^3.1.0",
+    "lodash.zip": "^3.1.0",
     "mqtt": "^1.4.0"
   },
   "devDependencies": {
