Use JSCS preset module

--- a/.jscsrc
+++ b/.jscsrc
@@ -1,9 +1,3 @@
 {
-  "preset": "airbnb",
-  "requireSemicolons": false,
-  "disallowSemicolons": true,
-  "requireTrailingComma": false,
-  "disallowTrailingComma": true,
-  "validateQuoteMarks": "\"",
-  "maximumLineLength": 100
+  "preset": "artcom"
 }
