--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "chai": "^3.2.0",
     "chai-as-promised": "^5.1.0",
     "eslint": "^1.3.1",
+    "jscs-preset-artcom": "^1.0.0",
     "mocha": "^2.3.0",
     "sinon": "^1.16.1",
     "sinon-chai": "^2.8.0"
