--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "babel-preset-es2015": "^6.1.18",
     "chai": "^3.2.0",
     "chai-as-promised": "^5.1.0",
-    "eslint": "^1.3.1",
-    "jscs-preset-artcom": "^1.0.0",
+    "eslint": "^2.7.0",
+    "eslint-config-artcom": "github:artcom/eslint-config-artcom",
     "mocha": "^2.3.0",
     "sinon": "^1.16.1",
     "sinon-chai": "^2.8.0"
