--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "dist/topping.js",
   "scripts": {
     "prepublish": "babel src --out-dir dist --source-maps",
-    "test": "mocha --compilers js:babel-core/register"
+    "test": "mocha --compilers js:babel-register"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
   "devDependencies": {
     "babel-cli": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
+    "babel-register": "^6.9.0",
     "chai": "^3.2.0",
     "chai-as-promised": "^5.1.0",
     "eslint": "^2.9.0",
