--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   ],
   "main": "dist/topping.js",
   "scripts": {
+    "lint": "eslint src test",
     "prepublish": "babel src --out-dir dist --source-maps",
-    "test": "mocha --compilers js:babel-register"
+    "test": "mocha --compilers js:@babel/register"
   },
   "repository": {
     "type": "git",
@@ -19,17 +20,18 @@
     "mqtt": "^2.4.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-register": "^6.9.0",
-    "chai": "^3.2.0",
-    "chai-as-promised": "^6.0.0",
-    "eslint": "^3.6.1",
-    "eslint-config-artcom": "^0.5.1",
-    "eslint-plugin-import": "^2.2.0",
-    "mocha": "^3.2.0",
-    "sinon": "^1.16.1",
-    "sinon-chai": "^2.8.0"
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/register": "^7.0.0",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^7.1.1",
+    "eslint": "^5.8.0",
+    "eslint-config-artcom": "^0.9.1",
+    "eslint-plugin-import": "^2.14.0",
+    "mocha": "^5.2.0",
+    "sinon": "^4.0.0",
+    "sinon-chai": "^2.14.0"
   },
   "license": "MIT"
 }
