--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "dist/topping.js",
   "scripts": {
     "lint": "eslint src test",
-    "prepublish": "babel src --out-dir dist --source-maps",
+    "prepublishOnly": "babel src --out-dir dist --source-maps",
     "test": "mocha --compilers js:@babel/register"
   },
   "repository": {
