--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,20 @@
 {
   "extends": "artcom",
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
   "rules": {
+    "import/no-unresolved": 0,
+    "import/no-extraneous-dependencies": "off",
     "no-console": "off",
     "no-param-reassign": "off"
-  }
+  },
+  "overrides": [
+    {
+      "files": ["**/*.ts", "**/*.tsx"],
+      "rules": {
+        "no-unused-vars": ["off"],
+        "no-undef": ["off"]
+      }
+    }
+  ]
 }
