--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   ],
   "main": "dist/topping.js",
   "scripts": {
-    "lint": "eslint src test",
-    "prepublishOnly": "babel src --out-dir dist --source-maps",
-    "test": "mocha --compilers js:@babel/register"
+    "lint": "eslint src/* test",
+    "prepublishOnly": "npm run compile",
+    "test": "mocha --compilers js:@babel/register",
+    "compile": "tsc"
   },
   "repository": {
     "type": "git",
@@ -20,18 +21,18 @@
     "mqtt": "^2.4.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.1.2",
-    "@babel/core": "^7.1.2",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/register": "^7.0.0",
+    "@types/node": "^10.12.18",
+    "@typescript-eslint/eslint-plugin": "^1.0.0",
+    "@typescript-eslint/parser": "^1.0.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^5.8.0",
-    "eslint-config-artcom": "^0.9.1",
+    "eslint": "^5.12.1",
+    "eslint-config-artcom": "^0.9.2",
     "eslint-plugin-import": "^2.14.0",
     "mocha": "^5.2.0",
     "sinon": "^4.0.0",
-    "sinon-chai": "^2.14.0"
+    "sinon-chai": "^2.14.0",
+    "typescript": "^3.2.4"
   },
   "license": "MIT"
 }
