--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.8.4",
   "description": "Syntactical sugar on top of the MQTT client cake",
   "files": [
-    "dist/"
+    "dist/",
+    "index.d.ts"
   ],
   "main": "dist/topping.js",
   "scripts": {
