--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   "main": "dist/main.js",
   "scripts": {
     "lint": "eslint --ext .ts src --fix",
-    "compile": "tsc",
-    "compile:watch": "tsc -w",
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "npm run type-check -- --watch",
+    "build": "npm run build:types && npm run build:js",
+    "build:types": "tsc --emitDeclarationOnly",
+    "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline",
     "test": "jest --runInBand",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand"
   },
@@ -19,16 +22,21 @@
   },
   "dependencies": {
     "async-mqtt": "^2.5.0",
-    "axios": "^0.19.2",
-    "eslint-plugin-jest": "^23.8.2"
+    "axios": "^0.19.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-typescript": "^7.9.0",
     "@types/node": "^13.9.5",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
     "eslint": "^6.8.0",
     "eslint-config-artcom": "^0.10.1",
     "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jest": "^23.8.2",
     "jest": "^25.2.4",
     "typescript": "^3.8.3"
   },
