--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.8.13",
   "description": "Syntactical sugar on top of the MQTT client cake",
   "files": [
-    "dist/"
+    "lib/"
   ],
-  "main": "dist/main.js",
+  "main": "lib/main.js",
+  "types": "lib/main.d.ts",
   "scripts": {
     "lint": "eslint --ext .ts src --fix",
     "type-check": "tsc --noEmit",
@@ -41,7 +42,6 @@
     "jest": "^25.2.4",
     "typescript": "^3.8.3"
   },
-  "types": "./index.d.ts",
   "license": "MIT",
   "keywords": [
     "mqtt",
