--- a/package.json
+++ b/package.json
@@ -9,11 +9,8 @@
   "types": "lib/main.d.ts",
   "scripts": {
     "lint": "eslint --ext .ts src --fix",
-    "type-check": "tsc --noEmit",
-    "type-check:watch": "npm run type-check -- --watch",
-    "build": "npm run build:types && npm run build:js",
-    "build:types": "tsc --emitDeclarationOnly",
-    "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline",
+    "build": "tsc",
+    "build:watch": "tsc -w",
     "test": "jest --runInBand",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand"
   },
@@ -26,11 +23,6 @@
     "axios": "^0.19.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.9.0",
-    "@babel/preset-typescript": "^7.9.0",
     "@types/jest": "^25.1.4",
     "@types/node": "^13.9.8",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
