--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:watch": "tsc -w",
     "test": "jest",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
-    "prepublishOnly": "npm run lint && npm run build && npm run test"
+    "prepublishOnly": "npm run lint && npm run build"
   },
   "repository": {
     "type": "git",
