--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "main": "lib/main.js",
   "types": "lib/main.d.ts",
   "scripts": {
+    "format": "prettier --write .",
     "lint": "eslint --ext .ts src --fix",
     "build": "tsc",
     "build:watch": "tsc -w",
@@ -30,10 +31,10 @@
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
-    "eslint-config-artcom": "^0.12.1",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jest": "^26.1.1",
     "jest": "^27.5.1",
+    "prettier": "^2.5.1",
     "typescript": "^4.5.5"
   },
   "license": "MIT",
