Add eslint import

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "lib/main.js",
   "types": "lib/main.d.ts",
   "scripts": {
-    "format": "prettier --write .",
+    "format": "prettier --write src test",
     "lint": "eslint --ext .ts src --fix",
     "build": "tsc",
     "build:watch": "tsc -w",
@@ -32,6 +32,7 @@
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "^26.1.1",
     "jest": "^27.5.1",
     "prettier": "^2.5.1",
