--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "scripts": {
     "format": "prettier --write src test",
     "lint": "eslint --ext .ts src --fix",
-    "prebuild": "tsc",
-    "build": "webpack",
+    "build": "tsc",
+    "build:watch": "tsc --watch",
     "test": "jest",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
     "prepublishOnly": "npm run lint && npm run build"
@@ -21,22 +21,22 @@
     "url": "https://github.com/artcom/mqtt-topping.git"
   },
   "dependencies": {
-    "async-mqtt": "^2.6.2",
+    "async-mqtt": "^2.6.3",
     "axios": "^1.4.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.0.0",
-    "@types/node": "^18.7.15",
-    "@types/ws": "^8.5.3",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "eslint": "^8.23.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^27.0.1",
-    "jest": "^29.0.2",
-    "prettier": "^2.7.1",
-    "typescript": "^4.8.2"
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.3.1",
+    "@types/ws": "^8.5.5",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
+    "eslint": "^8.43.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.2",
+    "jest": "^29.5.0",
+    "prettier": "^2.8.8",
+    "typescript": "^5.1.3"
   },
   "license": "MIT",
   "keywords": [
