--- a/package.json
+++ b/package.json
@@ -14,29 +14,29 @@
     "build:watch": "tsc --watch",
     "test": "jest",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
-    "prepublishOnly": "npm run lint && npm run build"
+    "prepublishOnly": "npm run lint && npm run format && npm run build"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/artcom/mqtt-topping.git"
   },
   "dependencies": {
-    "async-mqtt": "^2.6.3",
-    "axios": "^1.4.0"
+    "axios": "^1.4.0",
+    "mqtt": "^5.1.2"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
-    "@types/ws": "^8.5.5",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
+    "@types/jest": "^29.5.5",
+    "@types/node": "^20.8.4",
+    "@types/ws": "^8.5.6",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.2",
-    "jest": "^29.5.0",
+    "jest": "^29.7.0",
     "prettier": "^2.8.8",
-    "typescript": "^5.1.3"
+    "typescript": "^5.2.2"
   },
   "license": "MIT",
   "keywords": [
