--- a/package.json
+++ b/package.json
@@ -1,48 +1,77 @@
 {
   "name": "@artcom/mqtt-topping",
-  "version": "4.0.0",
-  "description": "Wraps the MQTT.js client to multiplex incoming messages to the subscribed handlers and supports querying retained topics via HTTP.",
-  "files": [
-    "lib/"
-  ],
-  "main": "lib/main.js",
-  "types": "lib/main.d.ts",
-  "scripts": {
-    "format": "prettier --write src test",
-    "lint": "eslint --ext .ts src --fix",
-    "build": "tsc",
-    "build:watch": "tsc --watch",
-    "test": "jest",
-    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
-    "prepublishOnly": "npm run lint && npm run format && npm run build"
-  },
+  "version": "4.0.2",
+  "description": "A TypeScript wrapper for MQTT.js with payload parsing, multi-handlers, and an HTTP query client.",
+  "license": "MIT",
+  "author": "ART+COM GmbH",
+  "homepage": "https://github.com/artcom/mqtt-topping",
   "repository": {
     "type": "git",
-    "url": "https://github.com/artcom/mqtt-topping.git"
+    "url": "git+https://github.com/artcom/mqtt-topping"
   },
+  "bugs": {
+    "url": "https://github.com/artcom/mqtt-topping/issues"
+  },
+  "type": "module",
+  "main": "./dist/index.mjs",
+  "module": "./dist/index.mjs",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.mts",
+      "import": "./dist/index.mjs",
+      "default": "./dist/index.mjs"
+    }
+  },
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "build": "tsdown",
+    "format": "prettier --write .",
+    "lint": "eslint src tests --ext .ts",
+    "prepublishOnly": "npm run lint && npm test && npm run build",
+    "test": "jest",
+    "type-check": "tsc --noEmit",
+    "watch": "tsc -w",
+    "prepare": "husky"
+  },
+  "types": "dist/index.d.mts",
   "dependencies": {
-    "axios": "^1.6.8",
-    "mqtt": "^5.5.0"
+    "mqtt": "^5.14.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.2",
-    "@types/ws": "^8.5.10",
-    "@typescript-eslint/eslint-plugin": "^7.4.0",
-    "@typescript-eslint/parser": "^7.4.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jest": "^27.9.0",
+    "@eslint/js": "^9.34.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.14.0",
+    "eslint": "^9.34.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
-    "prettier": "^3.2.5",
-    "typescript": "^5.4.3"
+    "jest-fetch-mock": "^3.0.3",
+    "lint-staged": "^15.5.0",
+    "prettier": "3.6.2",
+    "ts-jest": "^29.4.1",
+    "tsdown": "^0.16.5",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.41.0"
   },
-  "license": "MIT",
   "keywords": [
-    "mqtt",
-    "json",
     "http",
-    "async"
-  ]
+    "iot",
+    "mqtt",
+    "mqttjs",
+    "typescript",
+    "wrapper"
+  ],
+  "engines": {
+    "node": ">=22.0.0"
+  },
+  "lint-staged": {
+    "*.{ts,js,mjs,cjs}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ]
+  }
 }
