--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "build": "tsdown",
     "format": "prettier --write .",
-    "lint": "eslint src tests",
+    "lint": "eslint .",
     "prepublishOnly": "npm run lint && npm test && npm run build",
     "test": "jest",
     "type-check": "tsc --noEmit",
@@ -44,6 +44,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^24.10.1",
     "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
     "husky": "^9.1.7",
     "jest": "^30.2.0",
     "jest-fetch-mock": "^3.0.3",
